--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -13,6 +13,7 @@
         {{ field.label }} <br>
         {{ field }}<br>
     {% endfor %}
+    {{ form.errors }}
     <input type="submit" name="Create User">
 </form>
 </body>
