Created fully working login/logout/register system

--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Log in</h1>
-<form method="POST" action="{% url 'main-screen'%}">
+<form method="POST">
     {% csrf_token %}
     <label for="username">Username:</label>
     <input type="text" name="username">
@@ -17,6 +17,9 @@
     <input type="password" name="password">
     <br>
     <input type="submit" name="submit-login-form" value="Login">
+    {% for message in messages %}
+        <p>{{ message }}</p>
+    {% endfor %}
 
 </form>
 </body>
