--- a/main_screen/templates/main_screen/main_screen.html
+++ b/main_screen/templates/main_screen/main_screen.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1>Main screen</h1>
+    <p>Hi, {{ request.user }}</p>
+    <a href="{% url 'logout' %}">Logout</a>
 </body>
 </html>
