--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -17,6 +17,7 @@
     <input type="password" name="password">
     <br>
     <input type="submit" name="submit-login-form" value="Login">
+    <p>No account? <a href="{% url "register" %}">Sign up</a></p>
     {% for message in messages %}
         <p>{{ message }}</p>
     {% endfor %}
