Created main screen view that shows all added cameras, created form to add cameras, created detailed view of specific cameras

--- a/main_screen/templates/main_screen/main_screen.html
+++ b/main_screen/templates/main_screen/main_screen.html
@@ -8,5 +8,12 @@
     <h1>Main screen</h1>
     <p>Hi, {{ request.user }}</p>
     <a href="{% url 'logout' %}">Logout</a>
+    <form action="{% url 'add-camera' %}">
+        <input type="submit" value="Add camera" />
+    </form>
+    <br>
+    {% for camera in camera_objects %}
+        <p><a href="{% url 'camera-details' camera.id %}">{{ camera.id }} - {{ camera.name }} ({{ camera.ip }})</a></p>
+    {% endfor %}
 </body>
 </html>
