Changed session cookies settings

--- a/main_screen/templates/main_screen/camera_details.html
+++ b/main_screen/templates/main_screen/camera_details.html
@@ -5,8 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-    <p>{{ camera_object.id }}</p>
     <p>{{ camera_object.name }}</p>
     <p>{{ camera_object.ip }}</p>
+    <p>{{ camera_object.codec}}</p>
+    <p>{{ camera_object.user}}</p>
+    <p>{{ camera_object.substream}}</p>
+
 </body>
 </html>
