Added full support for camera capturing. Now you can add camera and capture it on main page.

--- a/main_screen/templates/main_screen/add_camera.html
+++ b/main_screen/templates/main_screen/add_camera.html
@@ -5,10 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" name="submit-add-camera-form" value="Add">
-</form>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" name="submit-add-camera-form" value="Add">
+    </form>
+    <script>
+        document.getElementById('id_password').type = 'password';
+    </script>
 </body>
 </html>
