Started styling dashboard page

--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -37,7 +37,7 @@
         {{ form.password2 }}
         <br>
         <br>
-        <input type="submit" name="submit-login-form" value="Register">
+        <input type="submit" name="submit-registration-form" value="Register">
         <div id="messages">
         {% if form.errors %}
             <ul class="user-msg error">
