--- a/main_screen/templates/main_screen/main_screen.html
+++ b/main_screen/templates/main_screen/main_screen.html
@@ -1,16 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Octopus - Main screen</title>
+    <title>Octopus - Cameras view</title>
+    <link rel="stylesheet" href="{% static '/css/main_screen_style.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Main screen</h1>
-    <p>Hi, {{ request.user }}</p>
+    <div id="logo"><img src="{% static '/img/Octopus_logo_black.svg' %}" alt="octpus_logo_black"></div>
     <a href="{% url 'logout' %}">Logout</a>
-    <form action="{% url 'add-camera' %}">
-        <input type="submit" value="Add camera" />
-    </form>
     <br>
     {% for camera in camera_objects %}
         <a href="{% url 'camera-details' camera.id %}"><div id="loading{{ forloop.counter }}">Connecting to a {{ camera.ip }}...</div></a>
