--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div id="register-container">
-<img src="{% static '/img/Octopus_logo_black.svg' %}">
+    <a href="{% url 'dashboard' %}"><img src="{% static '/img/Octopus_logo_black.svg' %}"></a>
 <br>
 <br>
 <br>
