--- a/main_screen/static/css/main_screen_style.css
+++ b/main_screen/static/css/main_screen_style.css
@@ -6,6 +6,7 @@ body{
 }
 #logo{
     width:auto;
+    padding:0.5%;
 }
 #logo img{
     width: 15vw;
@@ -14,7 +15,7 @@ body{
 }
 #user{
     float:right;
-    margin-top: 1vh;
+    margin-top: 2.5vh;
     margin-bottom: 1vh;
 }
 a, a:hover, a:focus, a:active {
