--- a/main_screen/static/css/main_screen_style.css
+++ b/main_screen/static/css/main_screen_style.css
@@ -3,8 +3,15 @@ body{
     font-family: 'Mulish', sans-serif;
     height:100%;
     width:100%;
+    background-color: black;
+}
+#container{
+    color:white;
+    background-color: black;
+    height:100%;
 }
 #logo{
+    background-color: white;
     width:auto;
     padding:0.5%;
 }
@@ -63,33 +70,37 @@ hr{
     padding-top: 2%;
     padding-bottom: 2%;
     font-size: 2vh;
+    color:white;
      transition: background-color .2s;
 }
+.camera-object:hover{
+    background-color: white;
+    color:black;
+}
+
 hr:last-child {
   display:none;
-}
-.camera-object:hover{
-    background-color: black;
-    color:white;
 }
 #container{
     width:100%;
     float:left;
 }
 .preview-screen{
-    width:81.8%;
+    width:81.5%;
     float:left;
 }
 
 .preview-container{
-    width:33.33%;
-    height:30%;
+    width:32.33%;
+    height:35vh;
     float:left;
+    background-color: black;
+    color:white;
     text-align: center;
 }
 .preview-container img{
-    width:100%;
-    height:100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .bottom-left {
