--- a/main_screen/templates/main_screen/dashboard.html
+++ b/main_screen/templates/main_screen/dashboard.html
@@ -26,10 +26,12 @@
             <p>Add camera</p>
         </div>
     </a>
+    <a href="{% url 'detector' %}">
         <div class="module-box">
             <img src="{% static '/img/person.png' %}" alt="octpus_logo_black">
             <p>Detector</p>
         </div>
+    </a>
         <div class="module-box">
             <img src="{% static '/img/shape.png' %}" alt="octpus_logo_black">
             <p>Areas</p>
