Created calendar picker for detector. Created simple and raw "Index of..." specific folder after clicking on available calendar days.

--- a/detector/templates/detector/detector.html
+++ b/detector/templates/detector/detector.html
@@ -14,10 +14,10 @@
 <div id="logo"><img src="{% static '/img/Octopus_logo_black.svg' %}" alt="octpus_logo_black"></div>
 <hr>
 <div id="container">
-    <a href="{% url 'main-screen' %}">
+    <a href="{% url 'detector-calendar' %}">
         <div class="module-box" id="detected-objects">
             <img src="{% static '/img/person.png' %}" alt="octpus_logo_black">
-            <p>Detected objects</p>
+            <p>Check detections</p>
         </div>
     </a>
     <a href="">
