Added detector to live preview. Currently it works only on one specified in views IP. It will change in future commit

--- a/main_screen/templates/main_screen/add_camera.html
+++ b/main_screen/templates/main_screen/add_camera.html
@@ -35,11 +35,6 @@
         {{ form.port }}
         <br>
         <br>
-        <label for="codec">Codec</label>
-        <br>
-        {{ form.codec }}
-        <br>
-        <br>
         <label for="user">User</label>
         <br>
         {{ form.user }}
@@ -50,9 +45,9 @@
         {{ form.password }}
         <br>
         <br>
-        <label for="substream">Use substream:</label>
+        <label for="suffix">URL suffix:</label>
         <br>
-        {{ form.substream }}
+        {{ form.suffix }}
         <br>
         <br>
         <div id="messages">
