Separated dashboard view from cameras view

--- a/main_screen/templates/main_screen/dashboard.html
+++ b/main_screen/templates/main_screen/dashboard.html
@@ -15,7 +15,7 @@
 <hr>
 <div id="container">
 
-    <a href="{% url 'main-screen' %}">
+    <a href="{% url 'cameras-view' %}">
         <div class="module-box" id="leftmost">
             <img src="{% static '/img/camera.png' %}" alt="octpus_logo_black">
             <p>Cameras view</p>
