--- a/cameras/templates/cameras/camera_add.html
+++ b/cameras/templates/cameras/camera_add.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Octopus - Add camera</title>
-    <link rel="stylesheet" href="{% static '/css/add_camera_style.css' %}">
+    <link rel="stylesheet" href="{% static 'cameras/add_camera_style.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
