--- a/detector/templates/detector/detector_calendar.html
+++ b/detector/templates/detector/detector_calendar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static '/css/calendar_style.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="{% static '/css/dashboard_style.css' %}">
+    <link rel="stylesheet" href="{% static '/css/main_screen_style.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap" rel="stylesheet">
